<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aramlaka.hw6.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/cityEdit"
            android:layout_alignLeft="@+id/cityEdit"
            android:layout_alignStart="@+id/cityEdit"
            android:id="@+id/countryEdit"
            android:hint="@string/countryHint"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/cityEdit"
            android:hint="@string/cityHint"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_below="@+id/countryEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/noCities"
            android:layout_height="wrap_content"
            android:id="@+id/noCitiesText"
            android:layout_width="300dp"
            android:layout_marginTop="60dp"
            android:layout_alignTop="@+id/searchButton"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCities"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:layout_width="match_parent"
        android:elevation="1dp"
        android:visibility="invisible"/>
</RelativeLayout>
