<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:background="@drawable/card_border">

    <TextView
        android:text="6:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/cityHourText"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/pressureLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="5dp"
        android:textDirection="rtl"/>

    <TextView
        android:text="@string/humidityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:id="@+id/textView9"
        android:layout_marginTop="5dp"
        android:textDirection="rtl"
        />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/conditionText"
        android:layout_alignStart="@+id/conditionText"
        android:id="@+id/pressureText"
        />

    <ImageView
        android:layout_width="100dp"
        app:srcCompat="@android:color/black"
        android:id="@+id/forecastIcon"
        android:layout_height="100dp"
        android:layout_below="@+id/cityHourText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/windText"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/humidityText"
        android:layout_alignStart="@+id/humidityText"
        />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/humidityText"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/pressureText"
        android:layout_alignStart="@+id/pressureText"
        />

    <TextView
        android:text="@string/conditionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/tempText"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:textDirection="rtl"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="@string/windLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textDirection="rtl"
        android:layout_below="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conditionText"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/tempText"
        android:layout_alignStart="@+id/tempText" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tempText"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/cityHourText"
        android:layout_alignStart="@+id/cityHourText"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <TextView
        android:text="@string/temperatureLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textDirection="rtl"
        android:layout_below="@+id/forecastIcon"
        android:layout_toLeftOf="@+id/cityHourText"
        android:layout_toStartOf="@+id/cityHourText"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp" />

</RelativeLayout>